# Proiecte-Personale

ATI/: build.gradle.kts  settings.gradle.kts
ATI/src/main/java/: module-info.java
ATI/src/main/java/org/example/ati/: HelloApplication.java  HelloController.java  Launcher.java
ATI/src/main/resources/org/example/ati/: pacient.fxml
Car-Management-System/src/main/java/: module-info.java
Car-Management-System/src/main/java/org/example/restaurante/: HelloApplication.java  Launcher.java
Car-Management-System/src/main/resources/org/example/restaurante/: admin.fxml  detaliu.fxml  detaliu_admin.fxml  hello-view.fxml  table.fxml
Clinic-Management-System/src/main/java/: module-info.java
Clinic-Management-System/src/main/java/org/example/restaurante/: HelloApplication.java
Duck-Social-Network/: build.gradle.kts
Duck-Social-Network/gradle/wrapper/: gradle-wrapper.properties
Duck-Social-Network/lab5/src/main/java/: module-info.java
Duck-Social-Network/lab5/src/main/resources/: duck-window.fxml  login-window.fxml  profile-page.fxml  user-window.fxml
Duck-Social-Network/src/main/resources/: chat-select-window.fxml  chat-window.fxml  friend-requests-window.fxml  friendship-window.fxml  main-menu.fxml
Flights/src/main/java/: module-info.java
Restaurant-Orders-System/src/main/java/: module-info.java
TrainStation/: settings.gradle.kts
TrainStation/src/main/java/: module-info.java
Travel-Offers-OOP/: CMakeLists.txt
Travel-Offers-OOP/Domeniu/: oferta.h
Travel-Offers-OOP/Erori/: Exceptii.h
Travel-Offers-OOP/GUI/: Gui.h  Observer.h
Travel-Offers-OOP/Lab_14/: VectorDinamic.h  main.cpp
Travel-Offers-OOP/Lab_14/Domeniu/: oferta.cpp
Travel-Offers-OOP/Lab_14/Erori/: Exceptii.cpp
Travel-Offers-OOP/Lab_14/Model_view/: model.cpp
Travel-Offers-OOP/Lab_14/Repo/: Repo_oferta.h
Travel-Offers-OOP/Lab_14/Service/: Service_oferta.h
Travel-Offers-OOP/Lab_14/Validator/: Validator_oferta.h
Travel-Offers-OOP/Model_view/: model.h
Travel-Offers-OOP/Repo/: Repo_oferta.cpp
Travel-Offers-OOP/Service/: Service_oferta.cpp
Travel-Offers-OOP/Teste/: Teste.cpp  Teste.h
Travel-Offers-OOP/UI/: Consola.cpp  Consola.h
Travel-Offers-OOP/Undo/: Undo.h
Travel-Offers-OOP/Validator/: Validator_oferta.cpp
Travel-Offers-OOP/Wishlist/: cos.cpp  cos.h
Vacation-Offers/: build.gradle.kts
Vacation-Offers/src/main/java/: module-info.java
(+251 files in other folders)
